--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Understand Express</h1>
+<p>
+    ー　勉強の疑問解消アプリ　ー
+</p>
+<br>
+<nav>
+    <ul>
+        <li><%= link_to "login", '#' %></li>
+        <li><%= link_to "sign up", '#' %></li>
+        <li><%= link_to "test login", '#' %></li>
+    </ul>
+</nav>
+
