Add a Users controller

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 <nav>
     <ul>
         <li><%= link_to "login", '#' %></li>
-        <li><%= link_to "sign up", '#' %></li>
+        <li><%= link_to "sign up", signup_path %></li>
         <li><%= link_to "test login", '#' %></li>
     </ul>
 </nav>
