--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,23 @@
 <% provide(:title, 'Sign up')%>
 <h1>UExpress/Siginup</h1>
+
+
+<%= form_with(model: @user, local: true) do |f| %>
+
+    <%= f.label :name, "名前" %>
+    <%= f.text_field :name %>
+    
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+
+    <%= f.label :password, "パスワード" %>
+    <%= f.password_field :password %>
+
+    <%= f.label :password_confirmation, "パスワード確認"%>
+    <%= f.password_field :password_confirmation %>
+
+    <%= f.label :selfintrodution, "自己紹介"%>
+    <%= f.text_field :selfintrodution %>
+
+    <%= f.submit "アカウント作成"%>
+<% end %>
