--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 
   <body>
     <%= render 'layouts/header' %>
-
+    <% flash.each do |meassage_type,message| %>
+      <%= message %>
+    <% end %> 
     <%= yield %>
     <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
