--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
 
 
 <%= form_with(model: @user, local: true) do |f| %>
+    <%= render 'shared/error_messages' %>
 
     <%= f.label :name, "名前" %>
     <%= f.text_field :name %>
