Add a method log_in & current_user

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 <br>
 <nav>
     <ul>
-        <li><%= link_to "login", '#' %></li>
+        <li><%= link_to "login", login_path %></li>
         <li><%= link_to "sign up", signup_path %></li>
         <li><%= link_to "test login", '#' %></li>
     </ul>
