--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
 
     <% if logged_in? %>
         <h2>images here</h2>
+        <%= link_to "仮アカウント更新", edit_user_path(current_user) %>
+        <%= link_to "仮ログアウト" , logout_path, method: :delete %>
     <% end %>
-    
-    <%= link_to "仮ログアウト" , logout_path, method: :delete %>
 
 </header>
