--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,8 @@
         <%= link_to "仮アカウント更新", edit_user_path(current_user) %>
         <%= link_to "仮ログアウト" , logout_path, method: :delete %>
     <% end %>
-    <% if current_user %>
-        <% if current_user.admin? %>
-            <%= link_to "仮ユーザー削除", users_path %>
-        <% end %>
+    <% if current_user && current_user.admin? %>
+        <%= link_to "仮ユーザー削除", users_path %>
     <% end %>
 
 </header>
