--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>PasswordResets#edit</h1>
-<p>Find me in app/views/password_resets/edit.html.erb</p>
+<% provide(:title, "新パスワード入力") %>
+<h1>新パスワード入力</h1>
+
+<%= form_with(model: @user, url: password_reset_path(params[:id])
+        local: true) do |f| %>
+    <%= render 'shared/error_messages' %>
+
+    <%= hidden_field_tag :email, @user.email %>
+
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+
+    <%= f.submit "パスワード更新" %>
+<% end %>
