--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,2 +1,10 @@
-<h1>PasswordResets#new</h1>
-<p>Find me in app/views/password_resets/new.html.erb</p>
+<% provide(:title, "パスワード再設定")　%>
+<h1>パスワード再設定</h1>
+
+<%= form_with(url: password_resets_path, scope: :password_reset,
+        local: true) do |f| %>
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+
+    <%= f.submit "送信" %>
+<% end %>
