--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,10 @@
-<h1>User#password_reset</h1>
+<h1>パスワード再設定</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p>再設定するために、以下のリンクをクリックして下さい。</p>
+
+<%= link_to "Reset password!", edit_password_reset_url(@user.reset_token,
+                              email: @user.email) %>
+
+<p>このリンクは2時間後に無効になります。</p>
+
+<p>このメールに心当たりがない場合は、無視して下さい。</p>
