--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,7 @@
-User#password_reset
+再設定するために、以下のリンクをクリックして下さい。
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+このリンクは2時間後に無効になります。
+
+このメールに心当たりがない場合は、無視して下さい。
