--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up')%>
-<h1>UExpress/Siginup</h1>
+<h1>UExpress/Signup</h1>
 
 
 <%= form_with(model: @user, local: true) do |f| %>
