--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,16 +1,16 @@
 <% provide(:title, "新パスワード入力") %>
 <h1>新パスワード入力</h1>
 
-<%= form_with(model: @user, url: password_reset_path(params[:id])
+<%= form_with(model: @user, url: password_reset_path(params[:id]),
         local: true) do |f| %>
     <%= render 'shared/error_messages' %>
 
     <%= hidden_field_tag :email, @user.email %>
 
-    <%= f.label :password %>
+    <%= f.label :password, "パスワード" %>
     <%= f.password_field :password %>
 
-    <%= f.label :password_confirmation %>
+    <%= f.label :password_confirmation, "パスワード確認" %>
     <%= f.password_field :password_confirmation %>
 
     <%= f.submit "パスワード更新" %>
