--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer>
-    <small>
-        This is UExpress maked by To-R
-    </small>
+  <footer class="py-3">
+    <ul class="nav navbar fixed-bottom justify-content-center border-top pb-3">
+      <li class="nav-item"><a href="#" class="nav-link disabled">UExpress produced by To-R</a></li>
+    </ul>
+  </footer>
 </footer>
