--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <footer class="py-3">
-    <ul class="nav navbar fixed-bottom justify-content-center border-top pb-3">
+    <ul class="nav navbar navbar-light bg-dark fixed-bottom justify-content-center border-top pb-3">
       <li class="nav-item"><a href="#" class="nav-link disabled">UExpress produced by To-R</a></li>
     </ul>
   </footer>
