--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,43 +5,96 @@
 /* staticpages_home */
 
 .appname {
-  margin-top: 80px;
+  margin-top: 40px;
   font-size: 500%;
+  text-align: center;
 }
 
 .appcontent {
+  text-align: center;
   font-size: 300%;
-  margin-bottom: 800px;
+  margin-bottom: 100px;
+  display: flex;
+  align-items: center;
+  &:before {
+    content: "";
+    height: 1px;
+    flex-grow: 1;
+    background-color: #666;
+    margin-right: 1rem;
+    background: linear-gradient(-90deg, #666, transparent);
+  }
+  &:after {
+    content: "";
+    height: 1px;
+    flex-grow: 1;
+    background-color: #666;
+    margin-left: 1rem;
+    background: linear-gradient(90deg, #666, transparent);
+  }
 }
 
-.verticalcomponent {
+.button {
   list-style: none;
   > li {
     width: 10em;
-    margin-bottom: 5px;
       .loginbtn {
-        display: block;
+        position: relative;
+        display: inline-block;
+        width: 100%;
         height: 100%;
+        border-radius: 10px;
         background: #33a81f;
         padding:  15px;
         text-align: center;
         color: white;
+        font-weight: bold;
+        box-shadow: 0 3px 0 #19530f;
+        text-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+        &:active {
+          top: 3px;
+          box-shadow: none;
+        }
     }
       .signupbtn {
-        display: block;
+        position: relative;
+        display: inline-block;
+        width: 100%;
         height: 100%;
+        border-radius: 10px;
         background: rgb(83, 196, 167);
         padding:  15px;
         text-align: center;
         color: white;
+        font-weight: bold;
+        box-shadow: 0 3px 0 #275c4f;
+        text-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+        &:active {
+          top: 3px;
+          box-shadow: none;
+        }
     }
       .testloginbtn {
-        display: block;
+        position: relative;
+        display: inline-block;
+        width: 100%;
         height: 100%;
+        border-radius: 10px;
         background: #21dd00;
         padding:  15px;
         text-align: center;
         color: white;
+        font-weight: bold;
+        box-shadow: 0 3px 0 #18a100;
+        text-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+        &:active {
+          top: 3px;
+          box-shadow: none;
+        }
     }
   }
+}
+
+.card-body {
+  background-color: rgba(194, 195, 201, 0.856);
 }
