--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,19 @@
             <% if logged_in? %>
               <li class="nav-item"><%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link" %></li>
               <li class="nav-item"><%= link_to "アカウント更新", edit_user_path(current_user), class: "nav-link" %></li>
+              <li class="nav-item"><%= link_to "質問/記事作成", '#', class: "nav-link" %></li>
+              <li class="nav-item"><%= link_to "通知設定", '#', class: "nav-link" %></li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  リスト
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                  <li><a class="dropdown-item" href="#">niceリスト</a></li>
+                  <li><a class="dropdown-item" href="#">気になるリスト</a></li>
+                  <li><a class="dropdown-item" href="#">お気に入りの人リスト</a></li>
+                  <li><a class="dropdown-item" href="#">記事投稿リスト</a></li>
+                </ul>
+              </li>
             <% end %>
              <% if current_user && current_user.admin? %>
               <li class="nav-item"><%= link_to "ユーザー削除", users_path, class: "nav-link" %></li>
