--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -1,4 +1,4 @@
-
+/*ほぼ全てのページ*/
 a {
   text-decoration: none;
 }
@@ -7,4 +7,25 @@ body {
   margin-top:  40px;
 }
 
-/* footer */
+h1 {
+  text-align: center;
+  font-weight: bolder;
+}
+
+/*入力フォームのページ*/
+textarea {
+  resize: vertical;
+}
+
+.inputform {
+  width: 40%;
+  margin: 0 auto 1%;
+  .form-label {
+    font-weight: bold;
+  }
+}
+
+.submitbutton {
+  width: 10%;
+  margin: 0 auto;
+}
