--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Contact") %>
-<p>UExpress/Contact</p>
+<h1>Contact</h1>
 <p>
     if you want to contact to administrator,
     please send to AAAAA(administrator email)
