--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,36 @@
 <% provide(:title, 'Sign up')%>
-<h1>UExpress/Signup</h1>
+<h1>Signup</h1>
 
 
 <%= form_with(model: @user, local: true) do |f| %>
     <%= render 'shared/error_messages' %>
 
-    <%= f.label :name, "名前" %>
-    <%= f.text_field :name %>
+    <div class="inputform">
+        <%= f.label :name, "名前", class: "form-label" %>
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
     
-    <%= f.label :email %>
-    <%= f.email_field :email %>
+    <div class="inputform">
+        <%= f.label :email, class: "form-label" %>
+        <%= f.email_field :email, class: "form-control" %>
+    </div>
 
-    <%= f.label :password, "パスワード" %>
-    <%= f.password_field :password %>
+    <div class="inputform">
+        <%= f.label :password, "パスワード", class: "form-label" %>
+        <%= f.password_field :password, class: "form-control" %>
+    </div>
 
-    <%= f.label :password_confirmation, "パスワード確認" %>
-    <%= f.password_field :password_confirmation %>
+    <div class="inputform">
+        <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+    </div>
 
-    <%= f.label :selfintrodution, "自己紹介" %>
-    <%= f.text_field :selfintrodution %>
+    <div class="inputform">
+        <%= f.label :selfintrodution, "自己紹介", class: "form-label" %>
+        <%= f.text_area :selfintrodution, size: "40x5", class: "form-control" %>
+    </div>
 
-    <%= f.submit "アカウント作成"%>
+    <div class="submitbutton">
+        <%= f.submit "アカウント作成", class: "btn btn-primary" %>
+    </div>
 <% end %>
