--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
 
   <body style="padding-bottom:4.5rem; padding-top:4.5rem;">
     <%= render 'layouts/header' %>
-    <% flash.each do |message_type,message| %>
-      <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
-    <% end %> 
+    <div class="message_container">
+      <% flash.each do |message_type,message| %>
+        <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
+      <% end %> 
+    </div>  
     <%= yield %>
     <div class="container-fluid">
       <%= render 'layouts/footer' %>
