--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,32 +5,32 @@
 <%= form_with(model: @user, local: true) do |f| %>
     <%= render 'shared/error_messages' %>
 
-    <div class="inputform">
+    <div class="input_form">
         <%= f.label :name, "名前", class: "form-label" %>
         <%= f.text_field :name, class: "form-control" %>
     </div>
     
-    <div class="inputform">
+    <div class="input_form">
         <%= f.label :email, class: "form-label" %>
         <%= f.email_field :email, class: "form-control" %>
     </div>
 
-    <div class="inputform">
+    <div class="input_form">
         <%= f.label :password, "パスワード", class: "form-label" %>
         <%= f.password_field :password, class: "form-control" %>
     </div>
 
-    <div class="inputform">
+    <div class="input_form">
         <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
         <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
 
-    <div class="inputform">
-        <%= f.label :selfintrodution, "自己紹介", class: "form-label" %>
+    <div class="input_form">
+        <%= f.label :selfintrodution, "自己紹介（空白OK）", class: "form-label" %>
         <%= f.text_area :selfintrodution, size: "40x5", class: "form-control" %>
     </div>
 
-    <div class="submitbutton">
+    <div class="submit_button">
         <%= f.submit "アカウント作成", class: "btn btn-primary" %>
     </div>
 <% end %>
