Add adocker file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= render 'layouts/shim'%>
   </head>
 
-  <body style="padding-bottom:4.5rem; padding-top:4.5rem;">
+  <body style="padding-bottom: 4.5rem; padding-top: 4.5rem">
     <%= render 'layouts/header' %>
     <div class="message_container">
       <% flash.each do |message_type,message| %>
