Can browse the specific article(title,text) #11

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,7 @@
       <table>
         <tbody>
           <tr>
-            <%= link_to article.title, '#' %>
+            <%= link_to article.title, browsing_article_path(article) %>
             <br>
             <%= article.updated_at %>
           </tr>
