--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,21 +2,32 @@
 <h1>記事投稿リスト</h1>
 
 <div class="sum_article">
-  <div>Article count / <%= @articles.count %></div>
+  <div>Article count / <%= @user.articles.count %></div>
 </div>
 <div class="personal_article_list">
   <% if @user.articles.any? %>
     <% @articles.each do |article| %>
-      <table>
-        <tbody>
-          <tr>
-            <%= link_to article.title, browsing_article_path(article) %>
-            <br>
-            <%= article.updated_at %>
-          </tr>
-        </tbody>
-      </table>
+      <div class="an_item interspace_items">
+        <table>
+          <tbody>
+            <tr>
+              <%= link_to article.title, browsing_article_path(article) %>
+            </tr>
+            <tr>
+              <td>文章の正しさ:<%= article.accuracy_text %>&ensp;|&ensp;</td>
+              <td>文章難易度:<%= article.difficultylevel_text %>&ensp;|&ensp;</td>
+              <td>最終修正日:<%= article.updated_at %></td>
+            </tr>
+            <tr>
+              <td>小学生向け:<%= Article.inspect_level(article.Eschool_level) %>&ensp;|&ensp;</td>
+              <td>中学生向け:<%= Article.inspect_level(article.JHschool_level) %>&ensp;|&ensp;</td>
+              <td>高校生向け:<%= Article.inspect_level(article.Hschool_level) %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     <% end %>
+    <%== pagy_bootstrap_nav(@pagy) %>
   <% else %>
     <strong>まだ作成されていません</strong>
   <% end %>
