--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,14 @@
       <% flash.each do |message_type,message| %>
         <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
       <% end %> 
-    </div>  
+    </div>
     <%= yield %>
+    <div>
+    <%= debug(params) if Rails.env.development? %>
+    </div>
     <div class="container-fluid">
       <%= render 'layouts/footer' %>
     </div>
-    <%= debug(params) if Rails.env.development? %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
