--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,28 +2,44 @@
 <h1>記事投稿リスト</h1>
 
 <div class="search_form">
-  <p><%= @user.name %>さんの記事</p>
+  <div class="user_name"><%= @user.name %>さんの記事</div>
   <%= form_with url: personalrecord_searchresult_path(@user), method: :get, local: true do |f| %>
-    <%= f.text_field :content %>
-    <%= f.submit '検索' %>
-    <h2>文章の正確さ</h2>
-    
-    <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
-    <% evaluations = [1,2,3,4,5] %>
-    <% evaluations.each do |eva| %>
-      <%= f.check_box :accuracy_select, { multiple: true }, eva, nil %>
-      <%= eva %>
-    <% end %> 
 
-    <h2>文章難易度</h2>
-    <% evaluations.each do |eva| %>
-      <%= f.check_box :difficulty_select, { multiple: true }, eva, nil %>
-      <%= eva %>
-    <% end %> 
+    <div class="search">  
+      <%= f.text_field :content, class: "search_input" %>
+      <%= f.submit '検索', class: "button_size btn btn-primary" %>
+    </div>
 
-    <h2>期日</h2>
-    <%= f.date_field :term_from %> ~
-    <%= f.date_field :term_to %>
+    <div class="flex_container">
+      <div class="condition">文章の正確さ</div>
+      <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+      <% evaluations = [1,2,3,4,5] %>
+      <div class="checkbox">
+        <% evaluations.each do |eva| %>
+          <%= f.check_box :accuracy_select, { multiple: true }, eva, nil %>
+          <%= eva %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="flex_container">
+      <div class="condition">文章難易度</div>
+      <div class="checkbox">
+        <% evaluations.each do |eva| %>
+          <%= f.check_box :difficulty_select, { multiple: true }, eva, nil %>
+          <%= eva %>
+        <% end %>
+      </div> 
+    </div>
+
+
+    <div class="flex_container">
+      <div class="condition">期日</div>
+      <div class="input_term">
+          <%= f.date_field :term_from %> ~
+          <%= f.date_field :term_to %>
+      </div>
+    </div>
 
   <% end %>
 </div>
