--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -4,10 +4,14 @@
   top: 0;
   right: 0px;
   z-index: 0;
+  margin-top: 4rem;
 }
 
 a {
   text-decoration: none;
+}
+li {
+  list-style-type: none;
 }
 
 .body_container {
@@ -31,18 +35,31 @@ h1 {
 .header_btn {
   position: relative;
   right: 2rem;
-  top: 10%;
-  height: 2.5rem;
+  top: 20%;
+  height: 2.4rem;
   width: 2.7rem;
   display:  block;
   box-sizing: border-box;
-  background-color: coral;
   .btn_element {
     height: 2px;
   width: 100%;
   background-color: white;
   display: block;
-  margin-bottom: 20%;
+  margin: 18% 0;
+  }
+}
+
+.header_logo {
+  width: 10rem;
+  height: 100%;
+  text-align: center;
+  .logo_position {
+    height: 3rem;
+    width: 100%;
+    margin: 0.5rem 0;
+    line-height: 3rem;
+    font-size: 2rem;
+    font-weight: bold;
   }
 }
 
@@ -77,51 +94,25 @@ h1 {
   left: calc(100vw - 300px);
   width: 300px;
   height: calc(100vh - 4rem);
+  display: flex;
+  flex-direction: column;
+}
+
+.header_menu_item {
+  box-sizing: border-box;
+  width: 80%;
+  height: 1.2rem;
+  margin: 6px auto;
+  a {
+    color: white;
+  }
 }
 
 body.noscroll {
   overflow: hidden;
 }
 
-/*主に入力フォームのページ*/
-textarea {
-  resize: vertical;
-}
 
-.input_form {
-  width: 40%;
-  margin: 0 auto 1%;
-  .form-label {
-    font-weight: bold;
-  }
-}
-
-.submit_button {
-  width: 10%;
-  margin: 0 auto;
-}
-
-.submit_checkbox {
-  margin-left: 30%;
-}
-
-.adjust_to_form {
-  margin-left: 30%;
-  margin-top: 1%;
-}
-
-.field_with_errors {
-  .form-control {
-    border-color: rgb(219, 73, 73);
-    border-style: solid;
-    border-width: thin;
-  }
-}
-
-.message_container {
-  width: 90%;
-  margin: 0 auto;
-}
 
 /*記事リスト、質問リスト(検索結果・投稿リスト)の表示*/
 .an_item {
