Can use an avatar function #11

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -56,10 +56,14 @@
     .checkbox {
       height: 1.8vh;
       margin: auto 0;
+      .space {
+        margin-left: 4px;
+      }
     }
     .input_term {
       height: 1.8vh;
       margin: auto 0;
+      margin-left: 10px;
     }
   }
 }
