--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
           $(".hidden_screen").fadeToggle(0);
           $("body").toggleClass("noscroll");
         });
+        $(".header_menu_item a[href]").on("click", function (event) {
+          $(".header_btn").trigger("click");
+        });
       });
     </script>
   </body>
