--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,16 +33,20 @@
     <div class="input_form">
         <%= f.label :avatar, "プロフィール画像", class: "form-label" %>
         <% if @user.avatar? %>
-            <%= image_tag @user.avatar.thumb.url , class: "avatar" %>
+            <div class="form_postion_avatar">
+                現在の画像
+                <%= image_tag @user.avatar.thumb.url , class: "avatar" %>
+            </div>
         <% end %>
         <%= f.file_field :avatar, class: "form-control" %>
-        <%= f.hidden_field :avatar_cache %>
     </div>
 
-    <div class="input_form">
-        <%= f.label :remove_avatar, "プロフィール画像消去", class: "form-label" %>
-        <%= f.check_box :remove_avatar %>
-    </div>
+    <% if @user.avatar? %>
+        <div class="input_form">
+            <%= f.label :remove_avatar, "プロフィール画像消去", class: "form-label" %>
+            <%= f.check_box :remove_avatar %>
+        </div>
+    <% end %>
 
     <div class="submit_button">
         <%= f.submit "アカウント更新", class: "btn btn-primary" %>
