--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,24 @@
 <% provide(:title, 'User Profile') %>
 
-<% if @user.avatar? %>
-  <%= image_tag @user.avatar.thumb.url , class: "avatar" %>
-<% end %>
+<div class="user_profile">
+  <div class="page_name">ユーザープロフィール</div>
+  <div class="user_identification">
+    <% if @user.avatar? %>
+      <div class="profile_avatar">
+        <%= image_tag @user.avatar.thumb_min.url , class: "avatar" %>
+      </div>
+    <% end %>
+    <div class="user_name">
+      <%= @user.name %>
+    </div>
+  </div>
+  <div class="profile_text">
+    <%= @user.selfintrodution %>
+  </div>
+  <hr>
+  <div class="article_link">
+    <%= link_to "記事投稿リスト", article_path(current_user)%>
+  </div>
+</div>
 
-<%= @user.name %>
-<%= @user.selfintrodution %>
+
