--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_with(model: @user, url: password_reset_path(params[:id]), local: true) do |f| %>
 
-    <%= render 'shared/error_messages' %>
+    <%= render 'shared/error_messages', object: f.object %>
     <%= hidden_field_tag :email, @user.email %>
 
     <div class="input_form">
