--- a/app/views/articles/browsing.html.erb
+++ b/app/views/articles/browsing.html.erb
@@ -1,3 +1,37 @@
 <% provide(:title, "Reading the Article")%>
-<h1><%= @article.title %></h1>
-<div><%= @article.articletext %></div>
+
+<div class="browse_article_flex">
+  <div class="main_view">
+    <div class="title">
+      <%= @article.title %>
+    </div>
+    <hr>
+    <div class="text">
+      <%= @article.articletext %>
+    </div>
+    <div class="comment">
+      コメントーアカウント保持者限定ー
+    </div>
+  </div>
+  <div class="sub_view">
+    <div class="other_functions">
+    </div>
+    <div class="user_info">
+      <div class="name_and_avatar">
+        <% if @article.user.avatar? %>
+          <div class="avatar_img">
+            <%= image_tag @article.user.avatar.thumb_min.url , class: "avatar" %>
+          </div>
+        <% end %>
+        <div class="name">
+          <div class="vertical_center">
+          <%= @article.user.name %>
+          </div>
+        </div>
+      </div>
+      <div class="selfintrodution">
+        <%= @article.user.selfintrodution %>
+      </div>
+    </div>
+  </div>
+</div>
