--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, 'User Profile') %>
 
 <div class="user_profile">
-  <div class="page_name">ユーザープロフィール</div>
+  <div class="page_name">
+    ユーザープロフィール
+  </div>
   <div class="user_identification">
     <% if @user.avatar? %>
       <div class="profile_avatar">
