--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -123,6 +123,9 @@ body.noscroll {
   border: solid 3px #333;
   border-radius: 10px;
   background-color: rgb(127, 243, 185);
+  .separation {
+    border: solid black;
+  }
 }
 
 /* アバター */
