--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Create an Article")%>
-<h1>記事投稿</h1>
+<h1>記事編集</h1>
 
 <%= form_with(model: @article, local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
@@ -91,6 +91,6 @@
   </div>
 
   <div class="submit_button">
-    <%= f.submit "記事作成", class: "btn btn-primary" %>
+    <%= f.submit "記事更新", class: "btn btn-primary" %>
   </div>
 <% end %>
