--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -68,6 +68,13 @@
             </tr>
           </tbody>
         </table>
+        <% if current_user?(article.user) %>
+          <hr class="separation">
+          <div>
+            <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
+            &ensp;|&ensp;<%= link_to "編集", edit_article_path(article) %>
+          </div>
+        <% end %>
       </div>
     <% end %>
     <%== pagy_bootstrap_nav(@pagy) %>
