--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -5,7 +5,7 @@
             <hr>
             <ul>
                 <% object.errors.full_messages.each do |msg| %>
-                    <li><%= msg %></li>
+                    <li><%= ApplicationRecord.error_message_conversion(msg) %></li>
                 <% end %>
             </ul>
         </div>
