--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,12 +4,12 @@
 <%= form_with(model: @article, local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <div class="article_form">
+  <div class="article_question_form">
     <%= f.label :title, "記事タイトル", class: "form-label" %>
     <%= f.text_field :title, class: "form-control" %>
   </div>
 
-  <div class="article_form">
+  <div class="article_question_form">
     <div class="item">
       文章の正しさ
     </div>
@@ -37,7 +37,7 @@
     </div>  
   </div>
 
-  <div class="article_form">
+  <div class="article_question_form">
     <div class="item">
       文章難易度
     </div>
@@ -65,7 +65,7 @@
     </div>  
   </div>
 
-  <div class="article_form">
+  <div class="article_question_form">
     <div class="item">
       対象
     </div>
