--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="flex_container">
-      <div class="condition">文章の正確さ</div>
+      <div class="">文章の正確さ</div>
       <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
       <% evaluations = [1,2,3,4,5] %>
       <div class="checkbox">
@@ -23,7 +23,7 @@
     </div>
 
     <div class="flex_container">
-      <div class="condition">文章難易度</div>
+      <div class="">文章難易度</div>
       <div class="checkbox">
         <% evaluations.each do |eva| %>
           <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
@@ -34,42 +34,37 @@
 
 
     <div class="flex_container">
-      <div class="condition">期日</div>
+      <div class="">期日</div>
       <div class="input_term">
           <%= f.date_field :term_from %> ~
           <%= f.date_field :term_to %>
       </div>
     </div>
-
   <% end %>
 </div>
 
-<div class="sum_article">
+<div class="sum_question_article">
   <div>Article count / <%= @user.articles.count %></div>
 </div>
-<div class="personal_article_list">
+<div class="personal_question_article_list">
   <% if @user.articles.any? %>
     <% @articles.each do |article| %>
       <div class="an_item interspace_items">
-        <table>
-          <tbody>
-            <tr>
-              <%= link_to article.title, browsing_article_path(article) %>
-            </tr>
-            <tr>
-              <td>文章の正しさ:<%= article.accuracy_text %>&ensp;|&ensp;</td>
-              <td>文章難易度:<%= article.difficultylevel_text %>&ensp;|&ensp;</td>
-              <td>最終修正日:<%= article.updated_at %></td>
-            </tr>
-            <tr>
-              <td>小学生向け:<%= ApplicationRecord.inspect_level(article.Eschool_level) %>&ensp;|&ensp;</td>
-              <td>中学生向け:<%= ApplicationRecord.inspect_level(article.JHschool_level) %>&ensp;|&ensp;</td>
-              <td>高校生向け:<%= ApplicationRecord.inspect_level(article.Hschool_level) %></td>
-            </tr>
-          </tbody>
-        </table>
+        <div>
+          <%= link_to article.title, browsing_article_path(article) %>
+        </div>
+        <div class="flex">
+          <div>文章の正しさ:<%= article.accuracy_text %>&ensp;/&ensp;</div>
+          <div>文章難易度:<%= article.difficultylevel_text %>&ensp;/&ensp;</div>
+          <div>最終修正日:<%= article.updated_at %></div>
+        </div>
+        <div class="flex">
+          <div>小学生向け:<%= ApplicationRecord.inspect_level(article.Eschool_level) %>&ensp;/&ensp;</div>
+          <div>中学生向け:<%= ApplicationRecord.inspect_level(article.JHschool_level) %>&ensp;/&ensp;</div>
+          <div>高校生向け:<%= ApplicationRecord.inspect_level(article.Hschool_level) %></div>
+        </div>
         <% if current_user?(article.user) %>
-          <hr class="separation">
+          <div class="separation"></div>
           <div>
             <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
             &ensp;|&ensp;<%= link_to "編集", edit_article_path(article) %>
