--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,8 @@
       <li class="header_menu_item"><a href="#">niceリスト</a></li>
       <li class="header_menu_item"><a href="#">気になるリスト</a></li>
       <li class="header_menu_item"><a href="#">お気に入りの人リスト</a></li>
-      <li class="header_menu_item"><%= link_to "記事投稿リスト", article_path(current_user)%></li>       
+      <li class="header_menu_item"><%= link_to "記事投稿リスト", article_path(current_user) %></li>
+      <li class="header_menu_item"><%= link_to "質問投稿リスト", question_path(current_user) %></li>       
     <% end %>
     <% if current_user && current_user.admin? %>
         <li class="header_menu_item"><%= link_to "ユーザー削除", users_path%></li>
