--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,2 +1,107 @@
-<h1>Questions#edit</h1>
-<p>Find me in app/views/questions/edit.html.erb</p>
+<% provide(:title, "Create an Question")%>
+<h1>質問編集</h1>
+
+<%= form_with(model: @question, local: true) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
+
+  <div class="article_question_form">
+    <%= f.label :title, "質問タイトル", class: "form-label" %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+
+  <div class="article_question_form">
+    <div class="item">
+      文章の正しさ(希望)
+    </div>
+    <div class="flex_mode">
+      <div class ="space">
+        <%= f.radio_button(:accuracy_text, 1) %>
+        <%= f.label(:accuracy_text_1, "1") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:accuracy_text, 2) %>
+        <%= f.label(:accuracy_text_2, "2") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:accuracy_text, 3) %>
+        <%= f.label(:accuracy_text_3, "3") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:accuracy_text, 4) %>
+        <%= f.label(:accuracy_text_4, "4") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:accuracy_text, 5) %>
+        <%= f.label(:accuracy_text_5, "5") %>
+      </div>
+    </div>  
+  </div>
+
+  <div class="article_question_form">
+    <div class="item">
+      文章難易度(希望)
+    </div>
+    <div class="flex_mode">
+      <div class ="space">
+        <%= f.radio_button(:difficultylevel_text, 1) %>
+        <%= f.label(:difficultylevel_text_1, "1") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:difficultylevel_text, 2) %>
+        <%= f.label(:difficultylevel_text_2, "2") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:difficultylevel_text, 3) %>
+        <%= f.label(:difficultylevel_text_3, "3") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:difficultylevel_text, 4) %>
+        <%= f.label(:difficultylevel_text_4, "4") %>
+      </div>
+      <div class ="space">
+        <%= f.radio_button(:difficultylevel_text, 5) %>
+        <%= f.label(:difficultylevel_text_5, "5") %>
+      </div>
+    </div>  
+  </div>
+
+  <div class="article_question_form">
+    <div class="item">
+      対象
+    </div>
+    <div class="flex_mode">
+      <div class="checkbox">
+        <%= f.check_box :Eschool_level %>
+        <%= label_tag(:Eschool_level, "小学生向け") %>
+      </div>
+      <div class="checkbox">
+        <%= f.check_box :JHschool_level %>
+        <%= label_tag(:JHschool_level, "中学生向け") %>
+      </div>
+      <div class="checkbox">
+        <%= f.check_box :Hschool_level %>
+        <%= label_tag(:Hschool_level, "高校生向け") %>
+      </div>
+    </div>
+  </div>
+
+  <div class="richtext_form">
+    <%= f.label :articletext, "質問本体", class: "form-label" %>
+    <%= f.rich_text_area :articletext, {class: "trix-content form_height"} %>
+  </div>
+
+  <div class="question_edit_form_solve">
+    <div class="have_solved">
+      <%= f.radio_button(:solve, true) %>
+      <%= f.label(:solve_true, "解決") %>
+    </div>
+    <div class="not_solved">
+      <%= f.radio_button(:solve, false, {checked: true}) %>
+      <%= f.label(:solve_false, "未解決") %>
+    </div>
+  </div>
+
+  <div class="submit_button">
+    <%= f.submit "質問更新", class: "btn btn-primary" %>
+  </div>
+<% end %>
