--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,88 @@
-<h1>Questions#show</h1>
-<p>Find me in app/views/questions/show.html.erb</p>
+<% provide(:title, "personal questions list")%>
+<h1>質問投稿リスト</h1>
+
+<div class="search_form">
+  <div class="user_name"><%= @user.name %>さんの質問</div>
+  <%= form_with url: personalrecord_searchresult_path(@user), method: :get, local: true do |f| %>
+
+    <div class="search">  
+      <%= f.text_field :content, class: "search_input" %>
+      <%= f.submit '検索', class: "button_size btn btn-primary" %>
+    </div>
+
+    <div class="flex_container">
+      <div class="condition">文章の正確さ</div>
+      <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+      <% evaluations = [1,2,3,4,5] %>
+      <div class="checkbox">
+        <% evaluations.each do |eva| %>
+          <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+          <%= eva %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="flex_container">
+      <div class="condition">文章難易度</div>
+      <div class="checkbox">
+        <% evaluations.each do |eva| %>
+          <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+          <%= eva %>
+        <% end %>
+      </div> 
+    </div>
+
+
+    <div class="flex_container">
+      <div class="condition">期日</div>
+      <div class="input_term">
+          <%= f.date_field :term_from %> ~
+          <%= f.date_field :term_to %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<div class="sum_question_article">
+  <div>question count / <%= @user.questions.count %></div>
+</div>
+<div class="personal_question_article_list">
+  <% if @user.questions.any? %>
+    <% @questions.each do |question| %>
+      <div class="an_item interspace_items">
+        <div>
+          <%= link_to question.title, browsing_question_path(question) %>
+        </div>
+        <div class="flex">
+          <div>文章の正しさ:<%= question.accuracy_text %>&ensp;/&ensp;</div>
+          <div>文章難易度:<%= question.difficultylevel_text %>&ensp;/&ensp;</div>
+          <div>最終修正日:<%= question.updated_at %></div>
+        </div>
+        <div class="flex">
+          <div>小学生向け:<%= ApplicationRecord.inspect_level(question.Eschool_level) %>&ensp;/&ensp;</div>
+          <div>中学生向け:<%= ApplicationRecord.inspect_level(question.JHschool_level) %>&ensp;/&ensp;</div>
+          <div>高校生向け:<%= ApplicationRecord.inspect_level(question.Hschool_level) %></div>
+        </div>
+        <% if question.solve %>
+          <div class="solve_question">
+            解決
+          </div>
+        <% else %>
+          <div class="not_solve_question">
+            未解決
+          </div>
+        <% end %>
+        <% if current_user?(question.user) %>
+          <div class="separation"></div>
+          <div>
+            <%= link_to "削除", question, method: :delete, data: { confirm: "削除しますか?" } %>
+            &ensp;|&ensp;<%= link_to "編集", edit_question_path(question) %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <%== pagy_bootstrap_nav(@pagy) %>
+  <% else %>
+    <strong>まだ作成されていません</strong>
+  <% end %>
+</div>
