--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 
 <div class="search_form">
   <div class="user_name"><%= @user.name %>さんの記事</div>
-  <%= form_with url: personalrecord_searchresult_path(@user), method: :get, local: true do |f| %>
+  <%= form_with url: searchresult_parsonal_article_path(@user), method: :get, local: true do |f| %>
 
     <div class="search">  
       <%= f.text_field :content, class: "search_input" %>
@@ -11,7 +11,7 @@
     </div>
 
     <div class="flex_container">
-      <div class="">文章の正確さ</div>
+      <div class="condition">文章の正確さ</div>
       <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
       <% evaluations = [1,2,3,4,5] %>
       <div class="checkbox">
@@ -23,7 +23,7 @@
     </div>
 
     <div class="flex_container">
-      <div class="">文章難易度</div>
+      <div class="condition">文章難易度</div>
       <div class="checkbox">
         <% evaluations.each do |eva| %>
           <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
@@ -34,7 +34,7 @@
 
 
     <div class="flex_container">
-      <div class="">期日</div>
+      <div class="condition">期日</div>
       <div class="input_term">
           <%= f.date_field :term_from %> ~
           <%= f.date_field :term_to %>
